unpackaged/objects/wb_MembershipDetail__c.object
<CustomObject>
    <description>WellBe MD Member Contract Detail</description>
    <fields>
        <fullName>Amount__c</fullName>
        <label>金額（割引後）</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BalanceAmount__c</fullName>
        <label>追返金額</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BillingAmount__c</fullName>
        <label>請求金額</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CancellationDate__c</fullName>
        <label>キャンセル日付</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <label>分類</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>新規</fullName>
                </value>
                <value>
                    <fullName>継続</fullName>
                </value>
                <value>
                    <fullName>追加</fullName>
                </value>
                <value>
                    <fullName>交替</fullName>
                </value>
                <value>
                    <fullName>変更</fullName>
                </value>
                <value>
                    <fullName>解約変更</fullName>
                </value>
                <value>
                    <fullName>移行</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CrossReference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Refer to the borrower or lender of Membership Admission fee</description>
        <label>クロス参照</label>
        <referenceTo>wb_MembershipDetail__c</referenceTo>
        <relationshipLabel>会員契約詳細 (参考先)</relationshipLabel>
        <relationshipName>ChildRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Individual__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>会員</label>
        <referenceTo>wb_Individual__c</referenceTo>
        <relationshipLabel>会員契約詳細</relationshipLabel>
        <relationshipName>IndividualMDMembership</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MemberName__c</fullName>
        <label>会員氏名</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberNo__c</fullName>
        <label>会員番号</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>会員</label>
        <referenceTo>wb_Member__c</referenceTo>
        <relationshipLabel>会員契約詳細</relationshipLabel>
        <relationshipName>MemberNo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MembershipEndDate__c</fullName>
        <label>会員終了日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MembershipPlan__c</fullName>
        <label>会員プラン</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MembershipStartDate__c</fullName>
        <label>会員開始日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MembershipStopDate__c</fullName>
        <label>会員異動日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Membership__c</fullName>
        <label>会員契約</label>
        <referenceTo>wb_Membership__c</referenceTo>
        <relationshipLabel>会員契約詳細</relationshipLabel>
        <relationshipName>MDMemberDetail</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MonthlyUnitAmount__c</fullName>
        <label>月単価</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ParentDetail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Refer to the Parent Member</description>
        <label>親会員契約詳細</label>
        <referenceTo>wb_MembershipDetail__c</referenceTo>
        <relationshipLabel>会員契約詳細</relationshipLabel>
        <relationshipName>MDMemebrChildRecord</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PendingAction__c</fullName>
        <label>アクション待ち</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreviousRecord__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Refer to the record before changes</description>
        <label>前詳細</label>
        <referenceTo>wb_MembershipDetail__c</referenceTo>
        <relationshipLabel>会員契約詳細 (前詳細)</relationshipLabel>
        <relationshipName>MDMembershipNextRecord</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>人数</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>レート</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>備考</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SecondType__c</fullName>
        <label>次タイプ</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>サービス</label>
        <referenceTo>wb_Service__c</referenceTo>
        <relationshipLabel>会員契約詳細</relationshipLabel>
        <relationshipName>MDMemberService</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>タイプ</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>入会金</fullName>
                </value>
                <value>
                    <fullName>無記名</fullName>
                </value>
                <value>
                    <fullName>仮名</fullName>
                </value>
                <value>
                    <fullName>家族</fullName>
                </value>
                <value>
                    <fullName>単身</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UnitAmount__c</fullName>
        <label>年単価</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WorkingCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>勤務会社</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>会員契約詳細</relationshipLabel>
        <relationshipName>CompanyEmployee</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>f_BillingAmount__c</fullName>
        <formula>if(IsNull(MembershipStopDate__c), BillingAmount__c,BalanceAmount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>請求金額</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_ContractStatus__c</fullName>
        <formula>if(TEXT(Membership__r.Classification__c)=&apos;会社&apos;,&apos;法人／&apos;,&apos;個人／&apos;) + TEXT(Type__c) +MembershipPlan__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>契約形態</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>f_FamilyWorkingCompany__c</fullName>
        <formula>if (ISBLANK(ParentDetail__c),
WorkingCompany__r.Name,
ParentDetail__r.WorkingCompany__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>勤務会社</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>f_NameforOrderingTxt__c</fullName>
        <formula>SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(RIGHT(Name, LEN(Name) - FIND(&apos;-&apos;,Name)),&quot;R&quot;,&quot;&quot;),&quot;A&quot;,&quot;&quot;),&quot;C&quot;,&quot;&quot;),&quot;D&quot;,&quot;&quot;),&quot;-&quot;,&quot;.&quot;),&quot;c&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NameforOrderingTxt</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>f_NameforOrdering__c</fullName>
        <formula>VALUE(f_NameforOrderingTxt__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NameforOrdering</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_member_or_family__c</fullName>
        <formula>if (AND(TEXT(Type__c) !=&apos;入会金&apos;,ParentDetail__c=null),
&apos;会員&apos;,
if (AND(TEXT(Type__c) !=&apos;入会金&apos;,ParentDetail__c!=null),&apos;家族&apos;,&apos;&apos;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>会員・家族</label>
        <type>Text</type>
    </fields>
    <label>会員契約詳細</label>
    <nameField>
        <label>契約詳細番号</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>